5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1582_1334.log
== TEST (2019-03-13 00:38:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 10%2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:44:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 11%2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:44:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 11%3)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  2
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:44:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 11%6)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:45:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 11%7)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  4
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:45:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 11%8)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  3
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:45:55) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 11%4.5)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  2.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:26:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 8%0)

print("Potenciacao: ", 2**3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Resto: ", 8%0)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:57:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24%3 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:04:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 17/9)

print("Resto: ", %3 )

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", %3 )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:04:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:04:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.156426
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
